update dependencies to get it running with a modern java/node version